--- a/Project1/mainpage.html
+++ b/Project1/mainpage.html
@@ -154,5 +154,11 @@
       </div>
       <p>&copy; 2024 Gaming Lounge. All rights reserved.</p>
     </footer>
+    <script>
+        window.onload = function() {
+            alert("Due to difficulty in hosting a free website with a database, some features (features implemented using backend) of the website won't be accessible.
+");
+        };
+    </script>
   </body>
 </html>
