--- a/index.html
+++ b/index.html
@@ -109,10 +109,9 @@
               games.
             </p>
             <a
-              href="#"
+              href="./Project1/mainpage.html"
               target="_blank"
               class="btn"
-              onclick="showMessage1(event)"
               >View Project</a
             >
           </div>
@@ -126,10 +125,9 @@
               button below and shop now.
             </p>
             <a
-              href="#"
+              href="./Project2/shop.html"
               target="_blank"
               class="btn"
-              onclick="showMessage2(event)"
               >View Project</a
             >
           </div>
