--- a/Project2/shop.html
+++ b/Project2/shop.html
@@ -236,10 +236,9 @@
       &copy; 2024 Prashant Clothing Store. All Rights Reserved.
     </div>
 <script>
-        window.onload = function() {
-            alert("Due to difficulty in hosting a free website with a database, some features (features implemented using backend) of the website won't be accessible.
-");
-        };
+        document.addEventListener("DOMContentLoaded", function() {
+            alert("Due to difficulty in hosting a free website with a database, some features (features implemented using backend) of the website won't be accessible.");
+        });
     </script>
   </body>
 </html>
