--- a/Project2/shop.html
+++ b/Project2/shop.html
@@ -51,8 +51,8 @@
               alt="Male Fashion 1"
               class="product-image"
             />
-            <div class="product-name"><?php echo $name[1];?></div>
-            <div class="product-price">Rs.<?php echo $price[1];?>/-</div>
+            <div class="product-name">Shirt</div>
+            <div class="product-price">Rs.400/-</div>
             <a
               href="https://www.flipkart.com/surhi-men-checkered-casual-grey-shirt/p/itmcd618d5595dc5?pid=SHTGTUW5AXABYN73&lid=LSTSHTGTUW5AXABYN73ZAIEIU&marketplace=FLIPKART&store=clo%2Fash&spotlightTagId=BestsellerId_clo%2Fash&srno=b_1_4&otracker=browse&otracker1=hp_rich_navigation_PINNED_neo%2Fmerchandising_NA_NAV_EXPANDABLE_navigationCard_cc_1_L2_view-all&fm=organic&iid=70d28415-f15e-488b-8436-111367a017f1.SHTGTUW5AXABYN73.SEARCH&ppt=browse&ppn=browse"
               class="see-details-btn"
@@ -65,8 +65,8 @@
               alt="Male Fashion 2"
               class="product-image"
             />
-            <div class="product-name"><?php echo $name[2];?></div>
-            <div class="product-price">Rs.<?php echo $price[2];?>/-</div>
+            <div class="product-name">Hoodie</div>
+            <div class="product-price">Rs.1009/-</div>
             <a
               href="https://www.flipkart.com/surhi-men-checkered-casual-grey-shirt/p/itmcd618d5595dc5?pid=SHTGTUW5AXABYN73&lid=LSTSHTGTUW5AXABYN73ZAIEIU&marketplace=FLIPKART&store=clo%2Fash&spotlightTagId=BestsellerId_clo%2Fash&srno=b_1_4&otracker=browse&otracker1=hp_rich_navigation_PINNED_neo%2Fmerchandising_NA_NAV_EXPANDABLE_navigationCard_cc_1_L2_view-all&fm=organic&iid=70d28415-f15e-488b-8436-111367a017f1.SHTGTUW5AXABYN73.SEARCH&ppt=browse&ppn=browse"
               class="see-details-btn"
@@ -78,8 +78,8 @@
               alt="Male Fashion 3"
               class="product-image"
             />
-            <div class="product-name"><?php echo $name[3];?></div>
-            <div class="product-price">Rs.<?php echo $price[3];?>/-</div> 
+            <div class="product-name">Pants</div>
+            <div class="product-price">Rs.2100/-</div> 
             <a
               href="https://www.flipkart.com/combraided-slim-fit-men-black-trousers/p/itmeecd93af09ad2?pid=TROGMJXBGMHSKBRK&lid=LSTTROGMJXBGMHSKBRKCGYZ1L&marketplace=FLIPKART&store=clo%2Fvua&srno=b_1_6&otracker=browse&fm=organic&iid=1c67313e-2c59-4dca-9c07-4b180e59d8eb.TROGMJXBGMHSKBRK.SEARCH&ppt=browse&ppn=browse&ssid=pc8jdpn03k0000001708611595529"
               class="see-details-btn"
@@ -92,8 +92,8 @@
               alt="Male Fashion 4"
               class="product-image"
             />
-            <div class="product-name"><?php echo $name[4];?></div>
-            <div class="product-price">Rs.<?php echo $price[4];?>/-</div>
+            <div class="product-name">Shorts</div>
+            <div class="product-price">Rs.1900/-</div>
             <a
               href="https://www.flipkart.com/kyk-printed-men-blue-tights/p/itm7444d329efca2?pid=TGTGJ3KU3QTGXSAW&lid=LSTTGTGJ3KU3QTGXSAWVYZLTS&marketplace=FLIPKART&sattr[]=color&st=color"
               class="see-details-btn"
@@ -113,8 +113,8 @@
               alt="Female Fashion 1"
               class="product-image"
             />
-            <div class="product-name"><?php echo $name[1];?></div>
-            <div class="product-price">Rs.<?php echo $price[1];?>/-</div>
+            <div class="product-name">Hoodie</div>
+            <div class="product-price">Rs.777/-</div>
             <a
               href="https://www.sastodeal.com/default/dressberry-women-mustard-yellow-solid-hooded-sweatshirt-11952492.html"
               class="see-details-btn"
@@ -127,8 +127,8 @@
               alt="Female Fashion 2"
               class="product-image"
             />
-            <div class="product-name"><?php echo $name[2];?></div>
-            <div class="product-price">Rs.<?php echo $price[2];?>/-</div>
+            <div class="product-name">Pants</div>
+            <div class="product-price">Rs.999/-</div>
             <a
               href="https://www.sastodeal.com/default/dressberry-women-black-solid-regular-track-pants-12961850-12961850.html"
               class="see-details-btn"
@@ -140,15 +140,8 @@
               alt="Female Fashion 3"
               class="product-image"
             />
-            <div class="product-name"><?php echo $name[3];?></div>
-            <div class="product-price">Rs.<?php echo $price[3];?>/-</div>
-            <?php if($stock[3]>0) { echo '
-            <form action="updatestock.php" method="POST"> 
-            <input style="display: none;" name="product" type="text" value="'.$name[3].'">
-            <input style="display: none;" name="price" type="number" value="'.$price[3].'">
-            <input style="display: none;" name="category" type="text" value="female">  
-            <button class="add-to-cart-btn"> Add to Cart </button></form> <br>';} 
-            else {echo '<a href="#" class="add-to-cart-btn">Out of Stock</a>';}?>
+            <div class="product-name">Jeans</div>
+            <div class="product-price">Rs.1900/-</div>
             <a
               href="https://www.sastodeal.com/default/roadster-women-charcoal-grey-skinny-fit-high-rise-clean-look-stretchable-je-10058347.html"
               class="see-details-btn"
@@ -161,8 +154,8 @@
               alt="Female Fashion 4"
               class="product-image"
             />
-            <div class="product-name"><?php echo $name[4];?></div>
-            <div class="product-price">Rs.<?php echo $price[4];?>/-</div>
+            <div class="product-name">Jacket</div>
+            <div class="product-price">Rs.1500/-</div>
             <a
               href="https://www.sastodeal.com/default/dressberry-women-black-solid-regular-track-pants-12961850-12961850.html"
               class="see-details-btn"
@@ -182,8 +175,8 @@
               alt="Child Fashion 1"
               class="product-image"
             />
-            <div class="product-name"><?php echo $name[1];?></div>
-            <div class="product-price">Rs.<?php echo $price[1];?>/-</div>
+            <div class="product-name">Spiderman Costume</div>
+            <div class="product-price">Rs.1000/-</div>
             <a
               href="https://www.flipkart.com/s-creation-spiderman-tshirt-lower-mask-gloves-socks-kids-costume-wear/p/itmc82f7ad178d1c?pid=KCWGMNH7ZSKJYG5V&lid=LSTKCWGMNH7ZSKJYG5VQSK0G2&marketplace=FLIPKART&store=clo&srno=b_1_29&otracker=browse&fm=organic&iid=593cb429-be7c-4ef9-bd53-19fcf8e34c96.KCWGMNH7ZSKJYG5V.SEARCH&ppt=browse&ppn=browse&ssid=2tx4kjmkb40000001708611988010"
               class="see-details-btn"
@@ -196,8 +189,8 @@
               alt="Child Fashion 2"
               class="product-image"
             />
-            <div class="product-name"><?php echo $name[2];?></div>
-            <div class="product-price">Rs.<?php echo $price[2];?>/-</div>
+            <div class="product-name">T-Short and Shorts</div>
+            <div class="product-price">Rs.740/-</div>
             <a
               href="https://www.flipkart.com/maaruti-baby-boys-casual-t-shirt-shorts-pant/p/itm9dcc9daf1f06c?pid=KPBGNRXYG4RFDT4U&lid=LSTKPBGNRXYG4RFDT4UTMH61T&marketplace=FLIPKART&store=clo&srno=b_1_2&otracker=browse&fm=organic&iid=en_cz94-7suCexasMVi2fVmGK5wYiOvipxScKdPxOLjIs5gdqcbh4GKjcFoUx4dkK3wKn6_dk05MbZ6zrMHzpOmWg%3D%3D&ppt=browse&ppn=browse&ssid=i7j7xdino00000001708651528369"
               class="see-details-btn"
@@ -209,8 +202,8 @@
               alt="Child Fashion 3"
               class="product-image"
             />
-            <div class="product-name"><?php echo $name[3];?></div>
-            <div class="product-price">Rs.<?php echo $price[3];?>/-</div>
+            <div class="product-name">Princess Costume</div>
+            <div class="product-price">Rs.600/-</div>
             <a
               href="https://www.flipkart.com/crazylife-fashion-princess-kids-costume-wear/p/itm22037bd274fd4?pid=KCWGXNJGJQUGXNQE&lid=LSTKCWGXNJGJQUGXNQEMX4NGX&marketplace=FLIPKART&store=clo&srno=b_1_10&otracker=browse&fm=organic&iid=90d16098-03cf-4665-8efc-6c737881fb4c.KCWGXNJGJQUGXNQE.SEARCH&ppt=browse&ppn=browse&ssid=i7j7xdino00000001708651528369"
               class="see-details-btn"
@@ -222,8 +215,8 @@
               alt="Child Fashion 4"
               class="product-image"
             />
-            <div class="product-name"><?php echo $name[4];?></div>
-            <div class="product-price">Rs.<?php echo $price[4];?>/-</div>
+            <div class="product-name">Hoodie</div>
+            <div class="product-price">Rs.500/-</div>
             <a
               href="https://www.flipkart.com/smosh-boys-printed-pure-cotton-t-shirt/p/itmc38d335295fa6?pid=KTBGNAPEQXFNP75G&lid=LSTKTBGNAPEQXFNP75GNKCCT7&marketplace=FLIPKART&store=clo&srno=b_1_22&otracker=browse&fm=organic&iid=en_cz94-7suCexasMVi2fVmGK5wYiOvipxScKdPxOLjIs7CAHcACWWIPlOgSeCmtbNwaqj5Gi0nBJhACzHBiQvbrw%3D%3D&ppt=browse&ppn=browse&ssid=i7j7xdino00000001708651528369"
               class="see-details-btn"
